--- a/Cinema/package.json
+++ b/Cinema/package.json
@@ -11,6 +11,12 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
+    "bcrypt": "^5.1.1",
+    "ci": "^2.3.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "mongoose": "^8.6.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
